[tool.poetry]
name = "flornya"
version = "0.1.0"
description = "FlorNya backend"
authors = ["FlorNya"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
gunicorn = "^22.0.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
redis = { extras = ["hiredis"], version = "^5.0.0" }
pydantic = { extras = ["email"], version = "^2.7.0" }
pydantic-settings = "^2.3.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.0" }
python-multipart = "^0.0.9"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
structlog = "^24.0.0"
slowapi = "^0.1.0"
cryptography = "^43.0.0"
anthropic = "^0.30"
stripe = "^10.0"
pyotp = "^2.9"
qrcode = { extras = ["pil"], version = "^7.4" }
celery = { extras = ["redis"], version = "^5.4" }
celery-redbeat = "^2.2"
weasyprint = "^62.0"
jinja2 = "^3.1"
aiosmtplib = "^3.0"
firebase-admin = "^6.5"
aiobotocore = { extras = ["boto3"], version = "^2.13" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
bandit = "^1.7.0"
aiosqlite = "^0.20.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["migrations"]
